--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,24 +1,56 @@
-.container{
-    background-color: rgba(104, 173, 173, 0.726);
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Fira Sans", sans-serif;
 }
 
+body {
+    background-image: url("../img/rigo-baby.jpg");
+    
+   
+}
+
+
+.cont{
+    margin: auto;
+    width:70%;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: rgba(19, 20, 20, 0.852);
+}
+h1{
+    color: whitesmoke ;
+}
 .Playlist{
+     box-sizing: border-box ;
+    padding: auto;
+    width: 100%;
+    padding: none;
     background-color: rgba(19, 20, 20, 0.726);
     color: whitesmoke ;
-
-    border-radius: 50px ;
+    border-radius: 100px ;
     border-color:gray ;
-
 }
-/* 
+button{
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+    font-size: xx-large;
+    display: inline-flex;
+    position: sticky;
+    bottom: 0;
+    padding: 5px;
+    margin: 3px;
+    border: 2px solid black;
+    border-radius: 5px;
+  
+  }
+  
+  .controls{
 
-*/
+    text-align: center;
+    position: sticky;
+    bottom: 0;
+    background: rgba(44, 40, 46, 0.8) ;
+    padding: 20px;
+  }
